--- a/index.html
+++ b/index.html
@@ -45,22 +45,16 @@
       --gfe-bg: #FAF9F6;
       --gfe-text: #222222;
     }
+
     * { box-sizing: border-box; }
-    html { 
-      scroll-behavior: smooth;
-      scroll-padding-top: 80px; /* Account for sticky header */
-    }
-    @media (prefers-reduced-motion: no-preference) {
-      html {
-        scroll-behavior: smooth;
-      }
-    }
+    html { scroll-behavior: smooth; }
     body {
       background: var(--gfe-bg);
       color: var(--gfe-text);
       font-family: 'Inter', 'Poppins', 'Nunito Sans', system-ui, -apple-system, sans-serif;
       overflow-x: hidden;
     }
+
     @media (prefers-reduced-motion: reduce) {
       * {
         animation-duration: 0.01ms !important;
@@ -69,161 +63,49 @@
         scroll-behavior: auto !important;
       }
     }
-    .tilt {
-      transform-style: preserve-3d;
-      transition: transform 0.18s ease, box-shadow 0.18s ease;
-      will-change: transform;
-      perspective: 1000px;
-    }
-    .tilt:active { transition: transform 0.05s; }
-    .tilt-inner { transform-style: preserve-3d; transition: transform 0.18s ease; }
-    @keyframes floaty {
-      0%, 100% { transform: translateY(0px); }
-      50% { transform: translateY(-12px); }
-    }
+
     @keyframes slideInUp {
       from { opacity: 0; transform: translateY(20px); }
       to { opacity: 1; transform: translateY(0); }
     }
+
     @keyframes fadeIn {
       from { opacity: 0; }
       to { opacity: 1; }
     }
+
     @keyframes scaleIn {
       from { opacity: 0; transform: scale(0.95); }
       to { opacity: 1; transform: scale(1); }
     }
-    .floaty { animation: floaty 6s ease-in-out infinite; }
+
     .animate-slide-in { animation: slideInUp 0.6s ease-out forwards; }
     .animate-fade-in { animation: fadeIn 0.8s ease-out forwards; }
     .animate-scale-in { animation: scaleIn 0.5s ease-out forwards; }
+
     .delay-100 { animation-delay: 0.1s; }
     .delay-200 { animation-delay: 0.2s; }
     .delay-300 { animation-delay: 0.3s; }
-    .delay-400 { animation-delay: 0.4s; }
+
     :focus-visible {
       outline: 3px solid var(--gfe-green);
       outline-offset: 2px;
     }
-    button:focus-visible, a:focus-visible {
-      outline: 3px solid var(--gfe-green);
-      outline-offset: 2px;
-    }
+
     .btn-primary {
       background-color: var(--gfe-green);
       color: white;
       transition: all 0.3s ease;
     }
+
     .btn-primary:hover {
       background-color: #0d3a1a;
       transform: translateY(-2px);
       box-shadow: 0 8px 16px rgba(27, 94, 32, 0.2);
     }
-    .btn-secondary {
-      border: 2px solid var(--gfe-gold);
-      color: var(--gfe-gold);
-      transition: all 0.3s ease;
-    }
-    .btn-secondary:hover {
-      background-color: var(--gfe-gold);
-      color: var(--gfe-green);
-      transform: translateY(-2px);
-    }
-    img { loading: lazy; }
-    .card-hover {
-      transition: all 0.3s cubic-bezier(0.34, 1.56, 0.64, 1);
-    }
+
+    .card-hover { transition: all 0.3s cubic-bezier(0.34, 1.56, 0.64, 1); }
     .card-hover:hover { transform: translateY(-4px); }
-    .header-sticky {
-      backdrop-filter: blur(10px);
-      background: rgba(250, 249, 246, 0.8);
-    }
-    .testimonial-card { border-left: 4px solid var(--gfe-gold); }
-    .btn-glow {
-      position: relative;
-      overflow: hidden;
-    }
-    .btn-glow::before {
-      content: '';
-      position: absolute;
-      top: 0;
-      left: -100%;
-      width: 100%;
-      height: 100%;
-      background: rgba(255, 255, 255, 0.2);
-      transition: left 0.5s ease;
-    }
-    .btn-glow:hover::before { left: 100%; }
-    .skip-link {
-      position: absolute;
-      top: -40px;
-      left: 0;
-      background: var(--gfe-green);
-      color: white;
-      padding: 8px;
-      text-decoration: none;
-      z-index: 100;
-    }
-    .skip-link:focus { top: 0; }
-  </style>
-</head>
-<body class="antialiased">
-  <a href="#main" class="skip-link">Skip to main content</a>
-
-  <!-- HEADER / NAVBAR -->
-  <header class="sticky top-0 z-40 header-sticky border-b border-gray-200">
-    <div class="max-w-6xl mx-auto px-4 py-3 flex items-center justify-between">
-      <a href="index.html" class="flex items-center gap-2 group" aria-label="Geochem Foods Express Home">
-        <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/image-cooU6mMI1RFeCvJAXMg1wACaOoRpCt.png" alt="Geochem Foods Express Logo" class="w-12 h-12 object-contain group-hover:scale-110 transition-transform duration-300" width="48" height="48" />
-        <div class="hidden sm:flex flex-col">
-          <span class="font-bold text-sm text-[var(--gfe-red)]">GEOCHEM</span>
-          <span class="font-semibold text-xs text-[var(--gfe-green)]">Foods Express</span>
-        </div>
-      </a>
-
-      <!-- Desktop Navigation (Public) -->
-      <nav id="public-nav" class="hidden md:flex items-center gap-6">
-        <a href="index.html" class="text-sm font-medium text-[var(--gfe-text)] hover:text-[var(--gfe-green)] transition">Home</a>
-        <a href="shop.html" class="text-sm font-medium text-[var(--gfe-text)] hover:text-[var(--gfe-green)] transition">Shop</a>
-        <a href="about.html" class="text-sm font-medium text-[var(--gfe-text)] hover:text-[var(--gfe-green)] transition">About</a>
-        <a href="why-us.html" class="text-sm font-medium text-[var(--gfe-text)] hover:text-[var(--gfe-green)] transition">Why Us</a>
-        <a href="blog.html" class="text-sm font-medium text-[var(--gfe-text)] hover:text-[var(--gfe-green)] transition">Blog</a>
-        <a href="contact.html" class="text-sm font-medium text-[var(--gfe-text)] hover:text-[var(--gfe-green)] transition">Contact</a>
-      </nav>
-
-      <!-- Desktop Navigation (Authenticated) -->
-      <nav id="private-nav" class="hidden md:flex items-center gap-6" style="display: none;">
-        <a href="marketplace.html" class="text-sm font-medium text-[var(--gfe-text)] hover:text-[var(--gfe-green)] transition">Marketplace</a>
-        <a href="profile.html" class="text-sm font-medium text-[var(--gfe-text)] hover:text-[var(--gfe-green)] transition">Profile</a>
-        <a href="analytics.html" class="text-sm font-medium text-[var(--gfe-text)] hover:text-[var(--gfe-green)] transition">Analytics</a>
-        <a href="cart.html" class="text-sm font-medium text-[var(--gfe-text)] hover:text-[var(--gfe-green)] transition">Cart</a>
-        <a href="settings.html" class="text-sm font-medium text-[var(--gfe-text)] hover:text-[var(--gfe-green)] transition">Settings</a>
-      </nav>
-
-      <!-- Desktop CTA Buttons (Public) -->
-      <div id="auth-buttons" class="hidden md:flex items-center gap-2">
-        <button onclick="checkAuthAndRedirect('marketplace.html')" class="px-4 py-2 rounded-full bg-[var(--gfe-gold)] text-[var(--gfe-green)] text-sm font-medium btn-primary shadow-md hover:bg-[var(--gfe-green)] hover:text-white">
-          <i class="fa fa-store mr-1"></i>Marketplace
-        </button>
-        <a href="login.html" class="px-4 py-2 rounded-full bg-[var(--gfe-green)] text-white text-sm font-medium btn-primary shadow-md">
-          Sign In
-        </a>
-      </div>
-
-      <!-- Desktop User Menu (Authenticated) -->
-      <div id="user-menu" class="hidden md:flex items-center gap-3" style="display: none;">
-        <span id="user-name" class="text-sm font-medium text-[var(--gfe-text)]"></span>
-        <button id="logout-btn" class="px-4 py-2 rounded-full bg-[var(--gfe-red)] text-white text-sm font-medium btn-primary shadow-md">
-          <i class="fa fa-sign-out-alt mr-1"></i>Logout
-        </button>
-      </div>
-
-      <!-- Mobile Menu Toggle Button -->
-      <button id="openMenu" aria-label="Open navigation menu" class="md:hidden p-2 rounded-lg bg-white border border-gray-300 hover:bg-gray-50 transition">
-        <i class="fas fa-bars text-[var(--gfe-green)] text-lg"></i>
-      </button>
-    </div>
-  </header>
 
   <!-- Mobile Sidebar Menu -->
   <div id="mobileMenu" class="hidden fixed inset-0 bg-black/50 z-50 md:hidden">
@@ -241,8 +123,7 @@
         </button>
       </div>
       
-      <!-- Mobile Navigation Links (Public) -->
-      <nav id="mobile-public-nav" class="flex flex-col gap-4">
+      <nav class="flex flex-col gap-4">
         <a href="index.html" class="text-base font-medium text-[var(--gfe-text)] hover:text-[var(--gfe-green)] transition py-2">
           <i class="fas fa-home mr-2"></i>Home
         </a>
@@ -261,39 +142,85 @@
         <a href="contact.html" class="text-base font-medium text-[var(--gfe-text)] hover:text-[var(--gfe-green)] transition py-2">
           <i class="fas fa-envelope mr-2"></i>Contact
         </a>
-        <hr class="my-2" />
-        <a href="login.html" class="text-base font-medium text-[var(--gfe-green)] hover:text-[var(--gfe-green)] transition py-2">
-          <i class="fas fa-sign-in-alt mr-2"></i>Sign In
-        </a>
-        <button onclick="checkAuthAndRedirect('marketplace.html')" class="text-left text-base font-medium text-[var(--gfe-green)] hover:text-[var(--gfe-green)] transition py-2">
-          <i class="fas fa-store mr-2"></i>Marketplace
-        </button>
-      </nav>
-
-      <!-- Mobile Navigation Links (Authenticated) -->
-      <nav id="mobile-private-nav" class="flex flex-col gap-4" style="display: none;">
-        <a href="marketplace.html" class="text-base font-medium text-[var(--gfe-text)] hover:text-[var(--gfe-green)] transition py-2">
-          <i class="fas fa-store mr-2"></i>Marketplace
-        </a>
-        <a href="profile.html" class="text-base font-medium text-[var(--gfe-text)] hover:text-[var(--gfe-green)] transition py-2">
-          <i class="fas fa-user mr-2"></i>Profile
-        </a>
-        <a href="analytics.html" class="text-base font-medium text-[var(--gfe-text)] hover:text-[var(--gfe-green)] transition py-2">
-          <i class="fas fa-chart-line mr-2"></i>Analytics
-        </a>
-        <a href="settings.html" class="text-base font-medium text-[var(--gfe-text)] hover:text-[var(--gfe-green)] transition py-2">
-          <i class="fas fa-cog mr-2"></i>Settings
-        </a>
-        <a href="cart.html" class="text-base font-medium text-[var(--gfe-text)] hover:text-[var(--gfe-green)] transition py-2">
-          <i class="fas fa-shopping-cart mr-2"></i>Cart
-        </a>
-        <hr class="my-2" />
-        <button id="mobile-logout-btn" class="text-left text-base font-medium text-[var(--gfe-red)] hover:text-red-700 transition py-2">
-          <i class="fas fa-sign-out-alt mr-2"></i>Logout
-        </button>
       </nav>
     </div>
   </div>
+
+
+
+    .header-sticky {
+      backdrop-filter: blur(10px);
+      background: rgba(250, 249, 246, 0.95);
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
+    }
+
+    .skip-link {
+      position: absolute;
+      top: -40px;
+      left: 0;
+      background: var(--gfe-green);
+      color: white;
+      padding: 8px;
+      text-decoration: none;
+      z-index: 100;
+    }
+
+    .skip-link:focus { top: 0; }
+
+    .blog-card {
+      border-top: 4px solid var(--gfe-green);
+    }
+
+    .category-badge {
+      display: inline-block;
+      background: var(--gfe-green)/10;
+      color: var(--gfe-green);
+      padding: 4px 12px;
+      border-radius: 20px;
+      font-size: 12px;
+      font-weight: bold;
+      margin-bottom: 12px;
+    }
+  </style>
+</head>
+<body class="antialiased">
+
+  <a href="#main" class="skip-link">Skip to main content</a>
+
+  <!-- HEADER -->
+  <header class="sticky top-0 z-40 header-sticky border-b border-gray-200">
+    <div class="max-w-6xl mx-auto px-4 py-3 flex items-center justify-between">
+      <a href="index.html" class="flex items-center gap-2 group" aria-label="Geochem Foods Express Home">
+        <img
+          src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/image-cooU6mMI1RFeCvJAXMg1wACaOoRpCt.png"
+          alt="Geochem Foods Express Logo"
+          class="w-12 h-12 object-contain group-hover:scale-110 transition-transform duration-300"
+          width="48"
+          height="48"
+        />
+        <div class="hidden sm:flex flex-col">
+          <span class="font-bold text-sm text-[var(--gfe-red)]">GEOCHEM</span>
+          <span class="font-semibold text-xs text-[var(--gfe-green)]">Foods Express</span>
+        </div>
+      </a>
+
+      <!-- Desktop Navigation -->
+      <nav class="hidden md:flex items-center gap-6">
+        <a href="index.html" class="text-sm font-medium text-[var(--gfe-text)] hover:text-[var(--gfe-green)] transition">Home</a>
+        <a href="shop.html" class="text-sm font-medium text-[var(--gfe-text)] hover:text-[var(--gfe-green)] transition">Shop</a>
+        <a href="about.html" class="text-sm font-medium text-[var(--gfe-text)] hover:text-[var(--gfe-green)] transition">About</a>
+        <a href="why-us.html" class="text-sm font-medium text-[var(--gfe-text)] hover:text-[var(--gfe-green)] transition">Why Us</a>
+        <a href="blog.html" class="text-sm font-medium text-[var(--gfe-text)] hover:text-[var(--gfe-green)] transition">Blog</a>
+        <a href="contact.html" class="text-sm font-medium text-[var(--gfe-text)] hover:text-[var(--gfe-green)] transition">Contact</a>
+      </nav>
+
+      <!-- Mobile Menu Toggle Button -->
+      <button id="openMenu" aria-label="Open navigation menu" class="md:hidden p-2 rounded-lg bg-white border border-gray-300 hover:bg-gray-50 transition">
+        <i class="fa fa-bars text-[var(--gfe-green)] text-lg"></i>
+      </button>
+    </div>
+  </header>
+
 
   <!-- MAIN CONTENT -->
   <main id="main" class="max-w-6xl mx-auto px-4">
